University theme half completed Imported from Changeset 2502

--- a/WarehouseEcommerce/WarehouseEcommerce.csproj
+++ b/WarehouseEcommerce/WarehouseEcommerce.csproj
@@ -587,7 +587,7 @@
     <Content Include="Content\Theme\University\app\fonts\SegoeUI.woff" />
     <Content Include="Content\Theme\University\app\fonts\selection.json" />
     <Content Include="Views\Theme\University\Shared\_LoginRegisterPartial.cshtml" />
-    <Content Include="Views\Theme\University\Shared\_BannerPartial.cshtml" />
+    <Content Include="Views\Theme\University\Shared\_SliderPartial.cshtml" />
     <Content Include="Views\Theme\University\Shared\_TopCategoryPartial.cshtml" />
     <Content Include="Views\Theme\University\Shared\_FooterPartialArea.cshtml" />
     <Content Include="Views\Theme\University\Shared\_FeatureProductPartial.cshtml" />
@@ -1076,6 +1076,10 @@
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Theme\Smart\Home\page.cshtml" />
     <Content Include="Views\Theme\University\Home\page.cshtml" />
+    <Content Include="Views\_ViewStart.cshtml" />
+    <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\Theme\University\Shared\_DeliveryInfoPartial.cshtml" />
+    <Content Include="Views\Theme\University\Shared\_HorizontalNavbarPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
