--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -839,6 +839,10 @@
     <Compile Include="Migrations\202005172319586_websitecartandwishlist-Table-Added.designer.cs">
       <DependentUpon>202005172319586_websitecartandwishlist-Table-Added.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202005181813167_siteId-added-in-productTable.cs" />
+    <Compile Include="Migrations\202005181813167_siteId-added-in-productTable.designer.cs">
+      <DependentUpon>202005181813167_siteId-added-in-productTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
     <Compile Include="IApplicationContext.cs" />
@@ -1788,6 +1792,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202005172319586_websitecartandwishlist-Table-Added.resx">
       <DependentUpon>202005172319586_websitecartandwishlist-Table-Added.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202005181813167_siteId-added-in-productTable.resx">
+      <DependentUpon>202005181813167_siteId-added-in-productTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
